[tool.poetry]
name = "postgresqlite"
version = "0.1.0"
description = ""
authors = ["Frank van Viegen <frank@vanviegen.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pg8000 = "^1.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
